--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,11 @@ h1{
 }
 
 img{
-    /*I used opacity in the RGB because I didn't want my image to be transparent. I don't know if it was right.
-    I left the opacity line in as a comment*/
-    border: 1px solid rgba(255, 0, 0, 0.5);
+    
+    border: 1px solid red;
     padding: 10px;
     width: 250px;
-    /*opacity: 0.5;*/
+    opacity: 0.5;
 }
 
 a:link{
